<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.profile.AboutUsFragment"
    android:background="@color/backgroundColor"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_us_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/about_us_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin"
                android:src="@drawable/ic_back_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/about_us_back_button"
                android:text="@string/about_us"
                android:layout_centerVertical="true"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_organic_logo"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/about_us_recycler_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:listitem="@layout/about_us_item"
       android:layout_marginStart="@dimen/small"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
       android:layout_marginEnd="@dimen/small"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/about_us_scroll_view"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textSize="18sp"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us_info"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us_mission"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app_tv1"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app_tv2"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app_tv3"
                android:textSize="18sp"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app_tv4"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv1"
                android:textSize="17sp"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv2"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv3"
                android:textSize="17sp"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv4"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/margin_medium"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>