<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:elevation="1dp">

    <TextView
        android:id="@+id/text_view_want_to_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sure_to_exit"
        android:ems="10"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/colorBlack" />

    <!-- Added hidden text for better understanding -->
    <TextView
        android:id="@+id/text_view_want_to_exit_2"
        android:layout_below="@+id/text_view_want_to_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/tomorrow_this_item_can_be_sold"
        android:textSize="14sp"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/appTextGrayColor"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/text_view_want_to_exit_2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stay_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stay"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_marginEnd="@dimen/small"
            android:textColor="@color/backgroundColor"
            android:backgroundTint="@color/colorPrimary"
            android:background="@drawable/registration_frame_background1" />

        <TextView
            android:id="@+id/exit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_marginStart="@dimen/small"
            android:background="@drawable/registration_frame_background"
            android:textColor="@color/backgroundColor"
            android:backgroundTint="@color/colorOrange"/>

    </LinearLayout>

</RelativeLayout>