<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/appTextGrayColor2"
    android:background="@drawable/registration_frame_background2">



    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/layout_margin"
        android:paddingEnd="@dimen/layout_margin"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_small"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:paddingBottom="@dimen/margin_medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cannot_leave_feedback"
            android:fontFamily="@font/open_sans"
            android:textSize="14sp"
            android:textColor="@color/appTextGrayColor"
            android:gravity="center"
            android:textAlignment="center"
            android:paddingBottom="20dp"/>
        <TextView
            android:id="@+id/feedback_alert_button"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/understand"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="15sp"
           android:gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:background="@drawable/registration_frame_background2"
            android:textColor="@color/appTextGrayColor2"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>